# memento_demo

./: .gitignore  demo.ipynb  demo_memento.py  hello.py  requirements-dev.txt  requirements-prod.txt  test.ipynb
agents/: backend.py  define_agent.py  model.py
sandbox/env/: hello.py
sc-agent-skills-files/: .gitignore  course_materials.md
sc-agent-skills-files/L1-partI/: budget_reallocation_rules.md  campaign_data_week1.csv  prompts_initial_conversation.md  prompts_with_skills.md  reading_material_1_I.md
sc-agent-skills-files/L1-partI/output_report_example/: Marketing_Campaign_Report_Dec9-15.xlsx
sc-agent-skills-files/L1-partII/: reading_material_1_II.md
sc-agent-skills-files/L2/: reading_material_2.md
sc-agent-skills-files/L3/: campaign_performance_4weeks.csv  prompts.md  reading_material_3.md
sc-agent-skills-files/L4/: reading_material_4.md
sc-agent-skills-files/L5/: reading_material_5.md
sc-agent-skills-files/L6/: CLAUDE.md  README.md  pyproject.toml
sc-agent-skills-files/L6/.claude/agents/: code-reviewer.md  test-generator-runner.md
sc-agent-skills-files/L6/src/task/: constants.py  display.py  main.py  models.py  storage.py
sc-agent-skills-files/L6/src/task/commands/: __init__.py  add.py  done.py  list.py
sc-agent-skills-files/L6/tests/: __init__.py  conftest.py  test_add.py  test_done.py  test_list.py
sc-agent-skills-files/L6_notes/: clear.py  prompts.md  reading_material_6.md
sc-agent-skills-files/L7/: README.md  agent.py  main.py  pyproject.toml  utils.py
sc-agent-skills-files/L7_notes/: reading_material_7.md
(+30 files in other folders)
