[project]
name = "task-cli"
version = "0.1.0"
description = "A command-line task manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
task = "task.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/task"]